# KRY-projekt1

./: AES.cpp  AES.h  CMakeLists.txt  Client.cpp  Client.h  Communicator.cpp  Communicator.h  DiffieHellman.cpp  DiffieHellman.h  FFS.cpp  FFS.h  Hash.cpp  Hash.h  IO.cpp  IO.h  Makefile  README.md  Server.cpp  Server.h  client.cpp  client.h  main.cpp  prime10  prime4096
